# aoc2023

./: CMakeLists.txt  README.md  main.cpp
eight/: eight.cpp  eight.h
eighteen/: eighteen.cpp  eighteen.h
eleven/: eleven.cpp  eleven.h
fifteen/: fifteen.cpp  fifteen.h
five/: five.cpp  five.h
four/: four.cpp  four.h
fourteen/: fourteen.cpp  fourteen.h
lib/: loadInput.cpp  loadInput.h  trie.cpp  trie.h
nine/: nine.cpp  nine.h
nineteen/: nineteen.cpp  nineteen.h
one/: one.cpp  one.h
seven/: seven.cpp  seven.h
seventeen/: seventeen.cpp  seventeen.h
six/: six.cpp  six.h
sixteen/: sixteen.cpp  sixteen.h
ten/: ten.cpp  ten.h
thirteen/: thirteen.cpp  thirteen.h
three/: three.cpp  three.h
twelve/: solve.md
two/: two.cpp  two.h
